Fixed layout issues on event cards

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -136,9 +136,16 @@ nav {
 .card {
     /* border: 1px solid rgb(44, 39, 39); */
     background-color: white;
-
     box-shadow: 5px 5px 5px rgb(179, 176, 176);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+.card .evnt-img {
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
 
 
 
@@ -146,6 +153,7 @@ nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+
 }
 
 .invite {
